# flutter_native_texture

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  flutter_native_texture_android_api.cpp
android/src/main/kotlin/com/funguscow/flutter_native_texture/: FlutterNativeTexturePlugin.kt
example/: pubspec.yaml
example/lib/: main.dart
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
lib/: flutter_native_texture.dart
linux/: CMakeLists.txt  sw_pixel_buffer.cc  sw_rend_plugin.cc
linux/include/sw_rend/: sw_rend_plugin.h
src/: flutter_native_texture_api.h
test/: test_native_method_channel_test.dart
windows/: CMakeLists.txt  flutter_native_texture_ffi.cpp  flutter_native_texture_plugin.cpp  flutter_native_texture_plugin.h  flutter_native_texture_plugin_c_api.cpp
windows/include/flutter_native_texture/: flutter_native_texture_plugin_c_api.h
